--- a/.dev.env
+++ b/.dev.env
@@ -1,15 +1,18 @@
-SECRET_KEY=qwerty123456
+SITE_URL=
 
-PP_UPLOAD_PATH=C:\ei_socm\profile_pictures
-DUMMY_PICTURE_PATH=C:\ei_socm\profile_pictures\dummy_profile_picture.jpg
-ENTRY_IMAGE_PATH=C:\ei_socm\entry_images
+SECRET_KEY=
+REFRESH_TOKEN_KEY=
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=123456
-DB_DATABASE=ei_socm_dev
+PP_UPLOAD_PATH=
+DUMMY_PICTURE_PATH=
+ENTRY_IMAGE_PATH=
 
-EMAIL_SMTP_HOST=smtp.gmail.com
-EMAIL_ADDRESS_PWRESET=ebubekirinan94@gmail.com
-EMAIL_ADRESS_APP_PASSWORD=sgfm mgue ofpu blde
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+
+EMAIL_SMTP_HOST=
+EMAIL_ADDRESS_PWRESET=
+EMAIL_ADRESS_APP_PASSWORD=
